// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom class on table body 1`] = `
<tbody
  className="table-body foo"
/>
`;

exports[`Default render of table body 1`] = `
<tbody
  className="table-body"
/>
`;

exports[`Table body with a couple rows 1`] = `
<tbody
  className="table-body"
>
  <tr
    className="table-row"
  />
  <tr
    className="table-row"
  />
</tbody>
`;

exports[`Table body with an expandable row 1`] = `
<tbody
  className="table-body"
>
  <tr
    className="table-row"
  />
</tbody>
`;

exports[`Table body with an expanded row 1`] = `
<tbody
  className="table-body"
>
  <tr
    className="table-row"
  >
    <td
      className="table-expand-icon table-btn-border"
      onClick={[Function]}
    >
      <i
        className="fas fa-caret-right fa-2x"
      />
    </td>
  </tr>
</tbody>
`;
